assert-struct/tests/snapshots/tuples__enum_tuple_three_errors.snap
---
source: assert-struct/tests/tuples.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/tuples_errors/enum_three_errors.rs:25:38
   |
25 |             current: Message::Triple(100, "expected", false),  // All three fields wrong
   |                                      ^^^  ^^^^^^^^^^  ^^^^^ got true
   |                                      |    |
   |                                      |    got "actual"
   |                                      got 42
